# Blockchain_from_scratch

go/ch01/00_makefile/: 00_makefile  Makefile  go.mod  main.go
go/ch01/01_transport_layer/: 01_transport_layer  go.mod  main.go
go/ch01/01_transport_layer/network/: server.go
go/ch02/: Makefile  main.go
go/ch02/core/: block.go
go/ch03/: Makefile  go.mod  main.go
go/ch03/core/: block.go  block_test.go  transaction.go
go/ch03/crypto/: keypair.go
go/ch03/cryto/: keypair.go  keypair_test.go
go/ch03/network/: local_transport.go  local_transport_test.go  transport.go
go/ch03/types/: address.go  hash.go
go/ch04/: go.mod  main.go
go/ch04/core/: block.go  block_test.go  encoding.go  hasher.go  transaction.go  transaction_test.go
go/ch04/crypto/: keypair.go
go/ch04/types/: address.go
go/ch05/: main.go  내용정리.md
go/ch05/core/: block.go  block_test.go  blockchain.go  blockchain_test.go  store.go  transaction.go  transaction_test.go  validator.go
go/ch05/network/: server.go
go/ch06/: go.mod  내용정리.md
go/ch06/core/: block.go  block_test.go  blockchain.go  blockchain_test.go  hasher.go  transaction_test.go  validator.go
go/ch06/crypto/: keypair.go
go/ch06/network/: local_transport.go
rust/: Cargo.toml
rust/src/: 01-block.rs
