[package]
name = "blockchain-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01-block" # 바이너리 이름
path = "src/01-block.rs" # 바이너리 소스 파일 경로

[dependencies]
sha2 = "0.10.6"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
log = "0.4"
env_logger = "0.10.0"
clap = "4.0.29"
bitcoincash-addr = "0.5.2"
rand = "0.8.5"
merkle-cbt = "0.3.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"